--- a/css/scroll-effects.css
+++ b/css/scroll-effects.css
@@ -15,8 +15,7 @@
         left: 0;
         width: 53%;
         height: 100vh;
-        /* background-position: left; */
-        background-position: center;
+        background-position: 25% 55%;
         background-repeat: no-repeat;
         background-size: cover;
         clip-path: polygon(-10% 0, 85% 0, 95% 100%, 0 100%);
